# convergio-deploy

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-deploy/: Cargo.toml
crates/convergio-deploy/src/: diagnostics.rs  diagnostics_checks.rs  ext.rs  github.rs  lib.rs  mcp_defs.rs  push_all.rs  routes.rs  schema.rs  types.rs  update_check.rs  upgrader.rs  validation.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  ADR-017-deploy-self-upgrade-system.md
